--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,6 +74,13 @@ p {
 //   }
 // }
 
+.zoom {
+  transition: transform .2s;
+}
+.zoom:hover {
+  transform: scale(1.1);
+}
+
 .block {
   display: block;
 }
