--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -49,29 +49,8 @@ p {
 }
 
 // .skills {
-//   color: black!important;
-//   font-family: 'pp_neue_montrealmedium'!important;
-//   font-weight: bold!important;
-//   font-style: normal!important;
-//   font-size: 1.2vw;
-//   text-decoration: none!important;
-//   text-transform: uppercase;
-//   h1 {
-//     font-size: 4em;
-//     color: black;
-//     text-transform: uppercase;
-//   }
-
-//   span {
-//     border-right: .05em solid;
-//     animation: caret 1s steps(1) infinite;
-//   }
-
-//   @keyframes caret {
-//     50% {
-//       border-color: transparent;
-//     }
-//   }
+//   background-color:;
+//   color: white;
 // }
 
 .zoom {
