--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,30 +78,30 @@
     <div class=" pl-3">
       <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2>
       <div class="columns ">
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card ">
           <%= image_tag ("card-skills-ruby.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card ">
           <%= image_tag ("card-skills-rails.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card">
           <%= image_tag ("card-skills-html-css-js.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card">
           <%= image_tag ("card-skills-stimulus.jpg"), width: 450, height: 450%>
         </div>
       </div>
       <div class="columns">
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card">
           <%= image_tag ("card-skills-wordpress.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card">
           <%= image_tag ("card-skills-figma.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered ">
+        <div class="column has-text-centered playing-card">
           <%= image_tag ("card-skills-postgresql.jpg"), width: 450, height: 450%>
         </div>
-        <div class="column has-text-centered  ">
+        <div class="column has-text-centered  playing-card">
           <%= image_tag ("card-skills-tw.jpg"), width: 450, height: 450%>
         </div>
       </div>
@@ -137,10 +137,6 @@
   </div>
 </section>
 
-<section class=" animation">
-  <%= image_tag ("paper-plane.png"), class:"paper-plane"%>
-</section>
-
 <section class="Contact section columns mx-6", id="contact">
     <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation my-6 el has-text-left">BONJOUR@VALENTIN <br> CHAUVEAU.COM</button>
 </section>
@@ -154,28 +150,12 @@
   </div>
 </footer>
 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-
-  const flightPath {
-    curviness: 1.25,
-    autoRotate: true,
-    values: [
-      {x: 100, y: -20},
-      {x: 300, y: 10},
-      {x: 500, y: 1000},
-      {x: 700, y: -90},
-    ]
-  }
-
-  const tween = new TimeLineLite();
-
-  tween.add(
-    TweenLite.to('.paper-plane', 1, {
-      bezier: flightPath,
-      ease: Power1.easeInOut
-    })
-  );
-
+  AOS.init({
+    duration: 3000,
+    once: true,
+  });
 </script>
 
 <script>
