--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -1,12 +1,10 @@
-.animation {
-  height: 50vh;
-  position: relative;
-  overflow: hidden;
-}
-
-.paper-plane {
-  height: 100px;
-   position: absolute;
-   top: 40%;
-   left: 5%;
-}
+// .playing-card{
+//   // box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+//  height: 300px;
+//  width: 300px;
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  margin: 100px 0;
+//  border-radius: 7px;
+// }
