--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,12 +5,18 @@ body {
   color: black!important;
   // height: 100vh;
   // padding: 0px 2vw;
+  // scroll-snap-type: y mandatory;
+  // overflow-y: scroll;
 }
 
 button {
   background-color: transparent;
   border: none;
 }
+
+// .section {
+//   scroll-snap-align: start!important;
+// }
 
 p {
   font-family: 'pp_neue_montrealbook'!important;
