navbar a bg fixed

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,3 +25,13 @@
     </div>
   </div>
 </nav>
+
+<script>
+
+  document.querySelectorAll('a[href^="#"]').forEach(
+    a => {
+      a.style.backgroundColor = 'transparent'
+    }
+  )
+
+</script>
