email contact fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -138,7 +138,7 @@
 </section>
 
 <section class="Contact section columns mx-6", id="contact">
-    <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation my-6 el has-text-left">BONJOUR@VALENTIN <br> CHAUVEAU.COM</button>
+    <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation my-6 el has-text-left">VALENTINCHAUVEAU <br> .WEB@GMAIL.COM</button>
 </section>
 
 <footer class="footer is-medium px-6 el">
