typewriting bio fix

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,9 +5,9 @@
       <div class="column image el">
         <%= image_tag("profile-pic-blck.jpg") %>
       </div>
-      <div class="resume column el typewriting is-size-6-mobile">
+      <div class="resume column el typewriting is-size-9-mobile">
         <h1>
-          <a class="typewrite" data-period="2000" data-type='["I CREATE LOGOS AND WEBSITES."]'>
+          <a class="typewrite" data-period="2000" data-type='["I CREATE LOGOS, WEBSITES AND APPLICATIONS."]'>
             <span class="wrap"></span>
           </a>
         </h1>
