text projects modified

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="is-size-3 is-size-5-mobile">LESBONSCOMPAGNONS.FR</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">Les Bons Compagnons are traders operating in food markets. This is a 360° project with logo & identity creation alongside a web platform. </p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">Les Bons Compagnons are traders operating in food markets. This is a 360° project with logo & identity creation alongside a web platform. Coming soon. </p>
         </div>
       </div>
     </div>
@@ -63,8 +63,8 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="has-text-left is-size-3 is-size-5-mobile">ROCKY-ALHOA.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br>Rocky Aloha is a marketplace inspired by airbnb, designed and developed within a week.
-            Front-end and Back-end work.</p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br>Rocky Aloha is a marketplace inspired by Airbnb, designed and developed within a week.
+            I intervened on both front-end and back-end.</p>
         </div>
       </div>
     <a href="http://rocky-aloha.herokuapp.com/" target="blank" class=" has-text-left is-size-4 is-size-6-mobile visit"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="0.9" stroke="currentColor" class="mt-2 icon w-1 h-1">
