--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 .flip-card {
   background-color: transparent;
   width: 100%;
-  height: 330px;
+  height: 370px;
   object-fit: cover;
   // perspective: 1000px;
 }
@@ -30,10 +30,18 @@
   background-position: center;
 }
 
+.tortuga-image{
+  height: 100%;
+  position:relative;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('tortuga-screen.jpg'))no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 330px;
+  height: 370px;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -46,7 +54,7 @@
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 330px;
+  height: 370px;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
