--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,6 +42,21 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" /></svg></a>
     </div>
 
+    <div class="flip-card column mb-6 el">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <div class="tortuga-image"></div>
+        </div>
+        <div class="flip-card-back has-text-left">
+          <a href="https://www.tortugadivingclub.com/" target="blank" class="has-text-left is-size-3 is-size-5-mobile">TORTUGADIVINGCLUB.COM</a>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">tortugadivingclub.com is a wordpress website that i built as a demo project for scuba diving businesses.
+          </p>
+        </div>
+      </div>
+        <a href="https://www.tortugadivingclub.com/" target="blank" class="has-text-left is-size-4 is-size-6-mobile visit"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="0.9" stroke="currentColor" class="mt-2 icon w-1 h-1">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" /></svg></a>
+    </div>
+
     <div class="flip-card column mb-6">
       <div class="flip-card-inner el">
         <div class="flip-card-front">
@@ -70,7 +85,6 @@
     <a href="http://rocky-aloha.herokuapp.com/" target="blank" class=" has-text-left is-size-4 is-size-6-mobile visit"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="0.9" stroke="currentColor" class="mt-2 icon w-1 h-1">
         <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" /></svg></a>
     </div>
-    <div class="column"></div>
   </div>
 </section>
 
