--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -88,18 +88,18 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section", id="skills">
   <div class="pl-3">
   <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2>
   <div class="container">
     <div class="columns is-centered is-vcentered">
       <div class="column is-6">
         <div class="p-6" style="position: relative;">
-          <img class="is-relative is-radius is-fullwidth is-object-cover" style="height: auto; max-height: 600px; z-index: 10;" src="https://images.unsplash.com/photo-1584947113929-2d02f9c06203?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" alt="">
+          <img class="el is-relative is-radius is-fullwidth is-object-cover" style="height: auto; max-height: 600px; z-index: 10;" src="https://images.unsplash.com/photo-1584947113929-2d02f9c06203?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" alt="">
         </div>
       </div>
       <div class="column is-6 ">
-        <div class="is-flex mb-6">
+        <div class="el is-flex mb-6">
           <div class="mr-4 has-text-primary">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ic image is-32x32"><path d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 9c2.7 0 5.8 1.29 6 2v1H6v-.99c.2-.72 3.3-2.01 6-2.01m0-11C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"></path></svg>
           </div>
@@ -108,7 +108,7 @@
             <p class="subtitle" contenteditable="false">Let's create a cohesive logo &amp; identity (including webdesign) that is true to the soul of your business.</p>
           </div>
         </div>
-        <div class="is-flex mb-6">
+        <div class="el is-flex mb-6">
           <div class="mr-4 has-text-primary">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="ic image is-32x32">
               <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
@@ -119,7 +119,7 @@
             <p class="subtitle">Let's tailor the perfect app for your needs that manage business and technical issues.</p>
           </div>
         </div>
-        <div class="is-flex">
+        <div class="el is-flex">
           <div class="mr-4 has-text-primary">
             <svg class="ic image is-32x32" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"></path>
@@ -136,7 +136,7 @@
   </div>
 </section>
 
-<section class="typewriting section mx-5 mt-6 is-medium animation ", id="skills">
+<section class="typewriting section mx-5 mt-6 is-medium animation ">
     <div class=" pl-3">
       <%# <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2> %>
       <div class="columns ">
