--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -75,7 +75,7 @@
     </div>
 
     <div class="flip-card column mb-6">
-      <div class="flip-card-inner el">
+      <%# <div class="flip-card-inner el">
         <div class="flip-card-front">
           <div class="lbc-image"></div>
         </div>
@@ -83,13 +83,13 @@
           <a href="" target="blank" class="is-size-3 is-size-5-mobile">LESBONSCOMPAGNONS.FR</a>
           <p class="text-work mt-6 has-text-left is-size-6-mobile">Les Bons Compagnons are traders operating in food markets. This is a 360° project with logo & identity creation alongside a web platform. Coming soon. </p>
         </div>
-      </div>
+      </div> %>
     </div>
   </div>
 </section>
 
-<section class="section", id="skills">
-  <div class="pl-3">
+<section class="Skills section mx-5 mt-1 is-medium columns", id="skills">
+  <div class="column pl-3">
   <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2>
   <div class="container">
     <div class="columns is-centered is-vcentered">
@@ -100,74 +100,40 @@
       </div>
       <div class="column is-6 ">
         <div class="el is-flex mb-6">
-          <div class="mr-4 has-text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ic image is-32x32"><path d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 9c2.7 0 5.8 1.29 6 2v1H6v-.99c.2-.72 3.3-2.01 6-2.01m0-11C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"></path></svg>
+          <div class="mr-4 ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ic image is-24x24"><path d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 9c2.7 0 5.8 1.29 6 2v1H6v-.99c.2-.72 3.3-2.01 6-2.01m0-11C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"></path></svg>
           </div>
           <div>
-            <h3 class="title is-size-5 is-spaced mb-3" contenteditable="false">LOGO &amp; IDENTITY CONCEPTION</h3>
-            <p class="subtitle" contenteditable="false">Let's create a cohesive logo &amp; identity (including webdesign) that is true to the soul of your business.</p>
+            <h3 class="title is-size-5 is-size-6-mobile is-spaced mb-3 " contenteditable="false">LOGO &amp; IDENTITY CONCEPTION</h3>
+            <p class="subtitle is-size-6-mobile" contenteditable="false">Let's create a cohesive logo &amp; identity (including webdesign) that is true to the soul of your business.</p>
           </div>
         </div>
         <div class="el is-flex mb-6">
-          <div class="mr-4 has-text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="ic image is-32x32">
+          <div class="mr-4 ">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="ic image is-24x24">
               <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
             </svg>
           </div>
           <div>
-            <h3 class="title is-size-5 is-spaced mb-3">APPLICATIONS TAILORED TO YOUR NEEDS</h3>
-            <p class="subtitle">Let's tailor the perfect app for your needs that manage business and technical issues.</p>
+            <h3 class="title is-size-5 is-size-6-mobile is-spaced mb-3">APPLICATIONS TAILORED TO YOUR NEEDS</h3>
+            <p class="subtitle is-size-6-mobile">Let's tailor the perfect app for your needs that manage business and technical issues.</p>
           </div>
         </div>
         <div class="el is-flex">
-          <div class="mr-4 has-text-primary">
-            <svg class="ic image is-32x32" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <div class="mr-4 ">
+            <svg class="ic image is-24x24" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"></path>
             </svg>
           </div>
           <div>
-            <h3 class="title is-size-5 is-spaced mb-3">WORDPRESS WEBSITE DELIVERED TURNKEY</h3>
-            <p class="subtitle">Let's create an efficient wordpress website with style, that you'll be able to manage with simplicity.</p>
+            <h3 class="title is-size-5 is-size-6-mobile is-spaced mb-3">WORDPRESS WEBSITE DELIVERED TURNKEY</h3>
+            <p class="subtitle is-size-6-mobile ">Let's create an efficient wordpress website with style, that you'll be able to manage with simplicity.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
   </div>
-</section>
-
-<section class="typewriting section mx-5 mt-6 is-medium animation ">
-    <div class=" pl-3">
-      <%# <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2> %>
-      <div class="columns ">
-        <div class="column has-text-centered playing-card ">
-          <%= image_tag ("card-skills-ruby.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered playing-card ">
-          <%= image_tag ("card-skills-rails.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered playing-card">
-          <%= image_tag ("card-skills-html-css-js.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered playing-card">
-          <%= image_tag ("card-skills-stimulus.jpg"), width: 450, height: 450%>
-        </div>
-      </div>
-      <div class="columns">
-        <div class="column has-text-centered playing-card">
-          <%= image_tag ("card-skills-wordpress.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered playing-card">
-          <%= image_tag ("card-skills-figma.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered playing-card">
-          <%= image_tag ("card-skills-postgresql.jpg"), width: 450, height: 450%>
-        </div>
-        <div class="column has-text-centered  playing-card">
-          <%= image_tag ("card-skills-tw.jpg"), width: 450, height: 450%>
-        </div>
-      </div>
-    </div>
 </section>
 
 <section class="About section mx-5 mt-1 is-medium columns", id="about">
@@ -218,6 +184,125 @@
     duration: 3000,
     once: true,
   });
+</script>
+
+<script>
+navigator.clipboard.writeText
+    ("valentinchauveau.web@gmail.com");
+
+    var email = document.querySelectorAll("button")[0];
+    email.addEventListener('click', function() {
+      if (email.getAttribute("data-text-swap") == email.innerHTML) {
+        email.innerHTML = email.getAttribute("data-text-original");
+      } else {
+        email.setAttribute("data-text-original", email.innerHTML);
+        email.innerHTML = email.getAttribute("data-text-swap");
+      }
+        setTimeout(function(){
+          email.setAttribute("data-text-swap", email.innerHTML);
+          email.innerHTML = email.getAttribute("data-text-original");;
+        }, 1500);
+    }, false);
+</script>
+
+<script>
+    /* navbar scroll color */
+
+    const [red, green, blue] = [225, 223, 221]
+    const navbar = document.querySelector('.navbar')
+    const anchor = document.querySelectorAll('a[href^="#"]')
+    // const underline = document.queryClassName('hover-underline-animation:after')
+
+    window.addEventListener('scroll', () => {
+      navbar.classList.add('hidden');
+      let y = 1 + (window.scrollY || window.pageYOffset) / 150
+      y = y < 1 ? 1 : y
+      const [r, g, b] = [red/y, green/y, blue/y].map(Math.round)
+      // navbar.style.backgroundColor = `rgb(${r}, ${g}, ${b})`
+
+      if (y >= 3.5) {
+        anchor.forEach( a => {
+          a.style.color = `rgb(${255}, ${255}, ${255})`
+          // console.log(a)
+        })
+      } else {
+        anchor.forEach( a => {
+          a.style.color = `rgb(${0}, ${0}, ${0})`
+        })
+      }
+
+      if (y <= 7.5) {
+        navbar.style.backgroundColor = `rgba(${r}, ${g}, ${b}, ${0.6})`
+      } else {
+        navbar.style.backgroundColor = `rgb(${r}, ${g}, ${b})`
+      }
+    });
+
+    /* scroll smooth to anchor */
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+
+          document.querySelector(this.getAttribute('href')).scrollIntoView({
+              behavior: 'smooth'
+          });
+      });
+    });
+</script>
+
+<script>
+var TxtType = function(el, toRotate, period) {
+      this.toRotate = toRotate;
+      this.el = el;
+      this.loopNum = 0;
+      this.period = parseInt(period, 10) || 2000;
+      this.txt = '';
+      this.tick();
+      this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+      var i = this.loopNum % this.toRotate.length;
+      var fullTxt = this.toRotate[i];
+
+      if (this.isDeleting) {
+      this.txt = fullTxt.substring(0, this.txt.length - 1);
+      } else {
+      this.txt = fullTxt.substring(0, this.txt.length + 1);
+      }
+
+      this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+      var that = this;
+      var delta = 200 - Math.random() * 100;
+
+      if (this.isDeleting) { delta /= 2; }
+
+      if (!this.isDeleting && this.txt === fullTxt) {
+      delta = this.period;
+      this.isDeleting = true;
+      } else if (this.isDeleting && this.txt === '') {
+      this.isDeleting = false;
+      this.loopNum++;
+      delta = 500;
+      }
+
+      setTimeout(function() {
+      that.tick();
+      }, delta);
+    };
+
+    window.onload = function() {
+      var elements = document.getElementsByClassName('typewrite');
+      for (var i=0; i<elements.length; i++) {
+          var toRotate = elements[i].getAttribute('data-type');
+          var period = elements[i].getAttribute('data-period');
+          if (toRotate) {
+            new TxtType(elements[i], JSON.parse(toRotate), period);
+          }
+      }
+    };
 </script>
 
 <script>
