--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,10 +22,10 @@
   background-position: center;
 }
 
-.rockyaloha-image{
+.douzepointcinq-image{
   height: 100%;
   position:relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('rocky-aloha-screen.jpg'))no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('12p5-screen.png'))no-repeat;
   background-size: cover;
   background-position: center;
 }
