add sam translation

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,7 +17,7 @@
 .lbc-image{
   height: 100%;
   position:relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('lbc-calicot-design.jpg'))no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('samtranslation.png'))no-repeat;
   background-size: cover;
   background-position: center;
 }
