--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -77,20 +77,22 @@
     </div>
 
     <div class="flip-card column mb-6">
-      <%# <div class="flip-card-inner el">
+      <div class="flip-card-inner el">
         <div class="flip-card-front">
           <div class="lbc-image"></div>
         </div>
         <div class="flip-card-back has-text-left">
-          <a href="" target="blank" class="is-size-3 is-size-5-mobile">LESBONSCOMPAGNONS.FR</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">Les Bons Compagnons are traders operating in food markets. This is a 360° project with logo & identity creation alongside a web platform. Coming soon. </p>
+          <a href="" target="blank" class="is-size-3 is-size-5-mobile">SAMSTRANSLATION.COM</a>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">This is a translation service specialized in marketing and health industries. This is a multi-lingual wordpress website.</p>
         </div>
-      </div> %>
+      </div>
+          <a href="https://www.samtranslation.com/" target="blank" class=" has-text-left is-size-4 is-size-6-mobile visit"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="0.9" stroke="currentColor" class="mt-2 icon w-1 h-1">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" /></svg></a>
     </div>
   </div>
 </section>
 
-<section class="Skills section mx-5 mt-1 is-medium columns", id="skills">
+<section class="Skills section mx-5 is-medium columns", id="skills">
   <div class="column pl-3">
   <h2 class="medium-text mb-6 el is-size-4-mobile">SKILLS</h2>
   <div class="container">
