--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,6 +70,11 @@ p {
 //   color: white;
 // }
 
+.section {
+  padding-top: 4rem!important;
+  padding-bottom: 4rem!important;
+}
+
 .zoom {
   transition: transform .2s;
 }
