--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,15 +27,9 @@
 
   <div class="songsalad lbc columns mt-6">
     <div class="flip-card column mb-6 el">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <div class="songsalad-image"></div>
-        </div>
+      <div class="flip-card-inner ">
         <div class="flip-card-back has-text-left">
-          <a href="http://www.songsalad.com/" target="blank" class="has-text-left is-size-3 is-size-5-mobile">SONGSALAD.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br> Songsalad is a mobile first game application developed on rails.
-            The goal is to find the lyrics and the title of the song in order to win the game.
-          </p>
+      HERE I DISPLAY SOME RECENT WORKS.<br>FEEL FREE TO VISIT AND ASK ME ANYTHING!
         </div>
       </div>
         <%# <a href="http://www.songsalad.com/" target="blank" class="has-text-left is-size-4 is-size-6-mobile visit"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="0.9" stroke="currentColor" class="mt-2 icon w-1 h-1">
@@ -144,9 +138,9 @@
     <div class="column pl-3">
     <h2 class="medium-text mb-6 el is-size-4-mobile">ABOUT</h2>
       <p class="el is-size-6-mobile">
-        I'M A 29YO FRENCH DEVELOPER GRADUATED <br> FROM LE WAGON NANTES.
-        I'M CURRENTLY <br> WORKING AS A FREELANCE DEVELOPER <br> BUT I'M ALWAYS OPEN TO NEW PROJECTS. <br>
-        I'M ALSO A PASSIONATE MUSIC COMPOSER.
+        I'M A 30YO DEVELOPER & COMPOSER. <br>
+        I'M CURRENTLY WORKING AS A FREELANCE<br> BUT I'M OPEN TO NEW PROJECTS.<br>
+        CURRENTLY BASED IN PARIS.
       </p>
       <br>
       <%# <p class="el">•CLICK THE VINYL TO TAKE A LISTEN•</p> %>
